# buddybot-server

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cursor/: project.json
.cursor/tasks/: phase1.md  phase2.md
.sqlx/: config.json  query-38745d051f38d2991a8cd41792941d974bfc30adfe139529ee42819f1034001a.json  query-40c93507144a57a20770036a4b22608d0da06cb5725248a69ae6468d5349061a.json  query-5509abf571e7af5c78fb818b1c1c5b2860e2bbab11f2de94e1ec9052b098b57d.json  query-5995b010ad23fec4ee66e25d7d72caad915b8645ca041dac172c7deef140d6f6.json  query-5b65395924cb8ca3dce13bde1f54567c6c93f97a3b3769ec46e34a061655d0b8.json  query-7cd8fb40954b62732fe2fbc324525ab5baaa4d7c13afc9f439cf4a66bff3894f.json  query-db5bffb93f7d110f0e10d6df4ada1d1110f9733ee1ce03305325bdbed8240158.json
config/: default.toml
mcp/: auth.mcp  main.mcp  proxy.mcp  scaling.mcp  security.mcp  websocket.mcp
migrations/: 20240405000000_create_users_and_sessions.sql  20250406034910_create_initial_schema.sql
src/: error.rs  lib.rs  main.rs
src/auth/: handlers.rs  mod.rs  rate_limit.rs  service.rs
src/config/: mod.rs
src/db/: mod.rs  models.rs  operations.rs
src/db/migrations/: 20240405_create_users.sql
src/proxy/: api_key.rs  mod.rs
src/scaling/: mod.rs
src/websocket/: connection.rs  mod.rs  pool.rs  server.rs
tests/: auth.rs  auth_api.rs  health_check.rs
