[package]
name = "buddybot-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Secure websocket server for BuddyBot, proxying Claude API requests"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
actix-web = "4.4"
actix-rt = "2.8"
actix-cors = "0.6"
tokio-tungstenite = "0.20"
futures = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
jsonwebtoken = "9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
dotenv = "0.15"
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
config = "0.13"
sysinfo = "0.29"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
num_cpus = "1.15"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
wiremock = "0.5"
test-log = "0.2"